tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/us-east-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-57b6e636",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-f9be6092"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-59b6e638",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-6e81fd22"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-56b6e637",
                    "NetworkAclId": "acl-a3ee73c8",
                    "SubnetId": "subnet-4630243c"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-a3ee73c8",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-0e289f65"
        }
    ]
}
